login button style issue

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
 .App-link {
@@ -35,4 +35,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+Button {
+  display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 6px 16px;
+
+position: absolute;
+height: 39px;
+left: 41px;
+right: 40px;
+top: 560px;
+
+/* Iris/100 */
+
+background: #6163fff3;
+border-radius: 4px;
 }
